[package]
name = "slice-rbtree"
version = "0.0.0"
repository = "https://github.com/solcery/on-chain/"
edition = "2021"
readme = "README.md"
keywords = ["collection", "tree", "solana"]
categories = ["data-structures", "embedded", "no-std"]
license = "Apache-2.0"

[dependencies]
borsh = "0.9.1"
bytemuck = {version = "1.7.2", features = ['derive','min_const_generics']}

[dev-dependencies]
criterion = "0.3"
paste = "1.0"
pretty_assertions = "1.3.0"

[[bench]]
name = "compare"
harness = false
