[package]
name = "slice-rbtree"
version = "0.1.0"
repository = "https://github.com/solcery/slice-rbtree/"
description = "A slice-based Red-black tree"
edition = "2021"
readme = "README.md"
keywords = ["collection", "tree", "solana"]
categories = ["data-structures", "embedded", "no-std"]
license = "Apache-2.0"
exclude = [
    "assets/*",
    "benches/*",
    "fuzz/*",
]

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
borsh = { version = "0.9.1", default_features = false, features = ["const-generics"] }
bytemuck = { version = "1.7.2", features = ['derive','min_const_generics'] }

[dev-dependencies]
criterion = "0.3"
paste = "1.0"
pretty_assertions = "1.3.0"

[[bench]]
name = "compare"
harness = false
